Registro e Inicio de Sesión para usuarios, completado.
Se realizaron todas las modificaciones necesarias para que el registro
del usuario y el inicio de sesión funcionen correctamente, se
modificaron estilos de página nueva de perfil de usuario, se completo el
archivo .ejs profile para el perfil del usuario, se modifico el
controlador de usuarios, el ruteador de usuarios, además de agregado de
algunas imagenes que se crearon.

Falta hacer toda la lógica necesaria para cuando un usuario este
registrado pueda acceder a la página de su perfil solamente con el id de
usuario despues de 'usuario', además de sitios accesibles para visitor y
users.

--- a/src/src/views/main/productCart.ejs
+++ b/src/src/views/main/productCart.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="contenido">
         <div class="album info">
-          <a href="/productos/1"><img class="img" src="images/greenvelvet.jpg" alt="" /></a>
+          <a href="/productos/1"><img class="img" src="images/registeredProducts/greenvelvet.jpg" alt="" /></a>
         </div>
         <div class="info">
           <h2 class="datos">Titulo</h2>
