--- a/src/public/css/header-footer.css
+++ b/src/public/css/header-footer.css
@@ -7,6 +7,7 @@
     border-bottom: 1px black solid;
     min-width: 360px;
     color: black;
+    background-color: white;
 }
 
 .hamburguer-button {
