--- a/src/public/css/stylesLogin.css
+++ b/src/public/css/stylesLogin.css
@@ -49,7 +49,7 @@ h1 {
   justify-content: center;
   margin: auto;
   width: 90%;
-  height: 275px;
+  height: 400px;
   border: 1px gray solid;
   border-radius: 10px;
 }
@@ -139,6 +139,13 @@ p {
   width: 90%;
   margin: 30px auto;
   text-align: center;
+}
+
+p#error {
+  width: 80%;
+  margin: 10px auto;
+  text-align: center;
+  color:rgb(209, 50, 50)
 }
 
 @media (min-width: 576px){
