--- a/src/src/views/users/login.ejs
+++ b/src/src/views/users/login.ejs
@@ -4,17 +4,22 @@
     <div id="main">
       <section id="login-and-text-container">
           <h1>Iniciar Sesión</h1>
-          <form id="login" action="/ruta" method="POST">
+          <form id="login" action="/usuario/" method="POST">
               <article>
                   <label for="email">Correo electrónico :</label>
-                  <input type="text" name="email" id="email" required>
+                  <input type="text" name="email" id="email" value="<%= locals.email && email ? email : '' %>" required>
               </article>
               <article>
-                  <label for="password">Contraseña</label>
+                  <label for="password">Contraseña :</label>
                   <input type="password" name="password" id="password" required>
               </article>
+              <% if(locals && locals.errors) { %>
+              <% errors.forEach( error => { %>
+              <p id="error">*<%= error.msg %></p><br>
+              <%  }) %>
+              <% } %>
               <article id="remember-general">
-                <label for="remember" id="label-remember">Recuerdame</label>
+                <label for="remember" id="label-remember">Recuérdame</label>
                 <input type="checkbox" name="recuerdame" id="remember">
                 </article>
               <button type="submit" id="submit-button">Iniciar Sesión</button>
