icono de usuario redirecciona a iniciar sesion

--- a/src/src/views/partials/header.ejs
+++ b/src/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <a class="logo" href="/"><img class="BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a> <!--<i class="fas fa-compact-disc"></i>-->
     <input type="text" class="seeker">
     <a class="search" href="#"><i class="fas fa-search"></i></a>
-    <a href="/usuario/registro" class="user"><i class="far fa-user"></i></a>
+    <a href="/usuario/inicio-de-sesion" class="user"><i class="far fa-user"></i></a>
     <a class="cart" href="/carrito-de-compras"><i class="fas fa-shopping-cart"></i></a>
 </header>
 <section class="menu">
