Inicio de Sesión y Registro de Usuario terminado
Se modifico una regla de estilo en header-footer.css añadiendo la
posible etiqueta con el nombre del usuario en el header una vez inicie
sesión, ahorita esta solamente comentada.

Se modifico el controlador de main para que proporcionará la
información del usuario a la página principal.

También se modifico el controlador de usuarios para que los métodos
funcionarán correctamente, el de registro y el Login.

Se creó un folder de 'middlewares' en 'src' con subcarpetas que
contienen los middlewares con propósitos específicos, como son las
verificaciones si tenemos un usuario registrado o para páginas
exclusivas para visitantes, no usuarios.

Se modifico el ruteador de usuarios que contiene los middlewares
necesarios para generar el next() según sea el caso o reedireccionar al
perfil de usuario, según sea el caso; además de que se modificaron el
nombre de las rutas por uno más apropiado.

Se modifico la vista de login solo para cambiar de lugar la etiqueta de
salto de linea <br>, por estética.

--- a/src/public/css/header-footer.css
+++ b/src/public/css/header-footer.css
@@ -203,6 +203,11 @@ li a {
         right: 175px;
     }
 
+    /* p#user { cuando comparta parametros con cualquier página que tenga el header.
+        display: inline;
+        font-size: 10px;
+    } */
+
     .social-networks {
         justify-content: flex-start;
         padding: 0 0 0 25px;
