Registro e inicio de sesión con Cookie completo
Se creó un nuevo archivo ejs para cuando el usuario se registre asi como
sus hojas de estilo correspondientes.

Se crearon los Middlewares necesarios para que el usuario solamente
pueda acceder al carrito asi como su perfil de usuario y el registro de
un producto.

Se modificaron los archivos package.json debido a la instalación de
cookie-parser, se modifico app.js entry point para usarlo como
Middleware de aplicación global o a nivel de aplicación, se modifico el
controlador de usuarios para pode escribir sobre el archivo JSON cada
vez que se creará/registrará un nuevo usuario en el sitio, es importante
quitar esto una vez se suba la app a heroku , debido a que no se tendrán
esos permisos una vez la app este funcionando.

Se modifico el routeador de usuarios, de productos y de main debido a
que se implementaron los Middlewares de usuarios o visitantes
necesarios.

Y se modificaron vistas en general para el acomodo de la información.

--- a/src/public/css/stylesUser.css
+++ b/src/public/css/stylesUser.css
@@ -13,6 +13,12 @@ body {
     margin: 0 0 120px 0;
 }
 
+div#first-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 img#img-after768 {
     display: none
 }
@@ -61,6 +67,15 @@ h3.info {
 a {
     text-decoration: none;
     color: blue
+
+}
+
+a#products {
+    color:rgb(107, 10, 243)
+}
+
+a#logout {
+    color: black;
 }
 
 @media (min-width: 768px) {
@@ -101,11 +116,27 @@ a {
 @media (min-width: 992px) {
 
    .profile-section {
-        margin: 0 0 160px 15%;
+        margin: 0 0 140px 15%;
     } 
+
+    div#greeting-and-image {
+        margin: 50px 0 0 0;
+    }
+
+    div#first-container {
+        width: 80%;
+    }
 
     div {
         margin: 0 12px 8px 0;
+    }
+
+}
+
+@media (min-width: 1600px) {
+
+    div#greeting-and-image {
+        margin: 110px 0 0 0;
     }
 
 }
