--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -31,7 +31,7 @@
             </div>
             <div class="info">
                 <label for="image">Imagen Actual: </label>
-                <img id="<%= product.IDImage %>" src="/images/<%= product.image %>" width="40%">
+                <img id="<%= product.IDImage %>" src="/images/registeredProducts/<%= product.image %>" width="40%">
                 <input type="file" name="image" id="image" value="<%= product.image %>" required>
             </div>
             <div class="info">
