--- a/src/src/views/users/login.ejs
+++ b/src/src/views/users/login.ejs
@@ -19,7 +19,7 @@
               <%  }) %>
               <% } %>
               <article id="remember-general">
-                <label for="remember" id="label-remember">Recuérdame</label>
+                <label for="remember" id="label-remember">Recordar usuario y contraseña :</label>
                 <input type="checkbox" name="recuerdame" id="remember">
                 </article>
               <button type="submit" id="submit-button">Iniciar Sesión</button>
