--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -22,7 +22,7 @@
             </div>
             <div class="info">
                 <label for="price">Precio: </label>
-                <input type="number" name="price" id="price"  value="<%= product.price %>" required>
+                <input type="number" name="price" step="0.01" id="price"  value="<%= product.price %>" required>
             </div>
             <div class="info">
                 <label for="description">Descripción: </label>
@@ -57,6 +57,11 @@
                 </div>
                 <% } %>
             </div>
+            <% if(locals && locals.errors) { %>
+                <% errors.forEach( error => { %>
+                <p id="error">*<%= error.msg %></p><br>
+                <% }) %> 
+            <% } %>
             <button type="submit" id="submit-product">Modificar</button>
         </form>
         <form action="/productos/<%= product.id %>?_method=DELETE" method="POST" class="product-delete">
