--- a/src/src/views/users/profile.ejs
+++ b/src/src/views/users/profile.ejs
@@ -15,7 +15,8 @@
         <div><h3 class="field">Nombre completo : </h3><h3 class="info"><%= user.firstName + " " + user.lastName %></h3></div>
         <div><h3 class="field">Correo electrónico :</h3><h3 class="info"><%= user.email %></h3></div>
         <div><h3 class="field">Contraseña :</h3><h3 class="info">**** <a href="#">Cambiar contraseña</a></h3></div>
-        <br><div><h3 class="field"><a id="products" href="/productos/">-> Mis productos registrados.</h3></a></div>
+        <br><div><h3 class="field"><a id="products" href="/productos/crear">-> Vender Vinyl.</h3></a></div>
+        <br><div><h3 class="field"><a id="products" href="#">-> Mis productos registrados.</h3></a></div>
         <img id="img-before768" src="/images/registeredUsers/<%= user.image %>">
     </section>
     <%- include('../partials/footer') %>
