Modificación y creación de producto mejorada
Se modificaron los archivos de hojas de estilo de la creación y edición
de producto para que los campos se mostraran mejor a partir de 1200px
como condición en 'min-width' en la media query.

Además de la modificación de los controladores de main y de products
corrigiendo la variable de 'let' para 'const' de lo mencionado por Pako
en el Sprint anterior.

Además del controlador de users para poder incluir que no se tengan
errores en la validaciones de formularios.

Se modifico el products.json para que solo tuvieramos una canción por
momento en todos los album's, cuando se tenga JS en el front y podamos
añadir dinamismo entonces ocuparemos el archivo creado con los
products.json de antes, este archivo es el de 'productsWithMoreSongs'
estos tienen las canciones que tenian en un principio, es decir, de 1 a
5-6 me parece; todo esto por motivos de los estilos cuando se tenian 2 o
más canciones entonces se rompian y no se miraban bien en ninguna
resolucion, para ello se esperara a que se tenga conocimiento de JS en
el front, iterando.

Se modificaron las vistas de create y edit product para poder mostrar
los datos de forma más dinámica y además se acomodaron los datos.

Y finalmente, el problema sigue siendo la validación de los formularios
para crear y editar el producto, debido a que ya sea que no se tengan
errores en los formularios los errores aparecen, por ello solo se tienen
los arrays validators declarados e inicializados pero no se tienen como
Middlewares de las respectivas rutas por post y por put,
respectivamente.

--- a/src/public/css/stylesCreateProduct.css
+++ b/src/public/css/stylesCreateProduct.css
@@ -14,6 +14,7 @@ body {
     width: 200px;
     height: 70px;
 }
+
 .central-BMG {
     display: block;
     padding: 20px 0;
@@ -26,6 +27,10 @@ body {
     display: block;
     width: 100vw;
     height: 1050px;
+}
+
+.division {
+    margin:0
 }
 
 h1 {
@@ -81,6 +86,10 @@ input {
     border: 0.5px gray solid;
     border-radius: 20px;
     outline: none;
+}
+
+input#price {
+    max-width: 80px;
 }
 
 input#songs {
@@ -141,8 +150,59 @@ p#error {
     color:rgb(209, 50, 50)
 }
 
+div#in-case-of-errors {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
 @media (min-width: 576px){
     .product-register{
         max-width: 450px;
     }
+}
+
+@media (min-width: 1200px) {
+
+    .container {
+        height: 85vh;
+        max-height: 650px;
+    }
+
+    .product-register{
+        width: 80%;
+        max-width: 760px;
+        height: 94%;
+        max-height: 650px;
+    }
+
+    .division {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .division#all-songs {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    div.info {
+        width: 45%;
+    }
+
+    input {
+        width: 380px;
+        max-width: 380px;
+    }
+
+    input#price {
+        align-self: center;
+    }
+
+    label#color-selector {
+        width: 250px;
+    }
+
 }
