--- a/src/public/css/stylesEditProduct.css
+++ b/src/public/css/stylesEditProduct.css
@@ -26,7 +26,11 @@ body {
 .container {
     display: block;
     width: 100vw;
-    height: 110%;
+    height: 1390px;
+}
+
+.division {
+    margin:0
 }
 
 h1 {
@@ -42,17 +46,62 @@ h1 {
     justify-content: space-evenly;
     margin: auto;
     width: 90%;
-    height: 90%;
+    height: 1270px;
     border: 1px gray solid;
     border-radius: 10px;
+    margin-bottom: 10px; /* extra con respecto a createProduct styles.*/
+}
+
+.product-delete {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: auto;
+    width: 90%;
+    height: 100px;
+    /* border: 1px gray solid; */
+    border-radius: 10px;
     margin-bottom: 10px;
+}
+
+#delete-product {
+    margin: 5px auto;
+    background-color: white;
+    text-align: center;
+    color: red;
+    display: inline-block;
+    border-radius: 25px;
+    width: 110px;
+    height: 40px;
+    border: 1px black solid;
+}
+
+#delete-product:hover {
+    background-color: red;
+    color: white;
 }
 
 .info {
     display: flex;
     flex-wrap: wrap;
-    margin: 10px 0;
+    margin: 10px 0; /* extra con respecto a createProduct styles.*/
 }
+
+.songs {
+    width: 89%;
+    margin-top: 2px;
+}
+
+#color-selector{
+    width: 450px;
+    display: block;
+    margin-bottom: 20px;
+}
+
+#color-album{
+    margin: auto;
+}
+
 .info img {
     margin: 0 60px;
 }
@@ -74,6 +123,18 @@ input {
     outline: none;
 }
 
+input#price {
+    max-width: 80px;
+}
+
+input#songs {
+    width: 100%;
+}
+
+input#lenght {
+    width: 100%;
+}
+
 input:hover,input:focus{
     border: 0.5px black solid ;
     border-radius: 20px;
@@ -88,7 +149,7 @@ textarea {
     border: 0.5px gray solid;
     border-radius: 10px;
     outline: none;
-    text-align: left;
+    text-align: left; /* extra */
 }
 
 textarea:focus, textarea:hover{
@@ -102,7 +163,7 @@ textarea:focus, textarea:hover{
 }
 
 #submit-product {
-    margin: 5px auto;
+    margin: 5px auto; /* diferente a create*/
     background-color: white;
     text-align: center;
     color: grey;
@@ -119,35 +180,20 @@ textarea:focus, textarea:hover{
     color: white;
 }
 
-.product-delete {
+p#error {
+    width: 80%;
+    margin: 10px auto;
+    text-align: center;
+    color:rgb(209, 50, 50)
+}
+
+div#in-case-of-errors {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    margin: auto;
-    width: 90%;
-    height: 90%;
-    /* border: 1px gray solid; */
-    border-radius: 10px;
-    margin-bottom: 10px;
+    align-content: center;
 }
 
-#delete-product {
-    margin: 5px auto;
-    background-color: white;
-    text-align: center;
-    color: red;
-    display: inline-block;
-    border-radius: 25px;
-    width: 110px;
-    height: 40px;
-    border: 1px black solid;
-}
-#delete-product:hover {
-    background-color: red;
-    color: white;
-}
-
-#search {
+/* #search { no existe
     margin: 0 auto;
     background-color: white;
     text-align: center;
@@ -157,22 +203,67 @@ textarea:focus, textarea:hover{
     width: 110px;
     height: 40px;
     border: 1px black solid;
-}
+} */
 
-#search:hover {
+/* #search:hover {
     background-color: black;
     color: white;
-}
-
-p#error {
-    width: 80%;
-    margin: 10px auto;
-    text-align: center;
-    color:rgb(209, 50, 50)
-}
+} */
 
 @media (min-width: 576px){
     .product-edit{
         max-width: 450px;
     }
+}
+
+@media (min-width: 1200px) {
+
+    .container {
+        height: 1050px;
+        max-height: 1300px;
+    }
+
+    .product-edit{
+        width: 80%;
+        max-width: 760px;
+        height: 930px;
+    }
+
+    .division {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .division#all-songs {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    div.info {
+        width: 45%;
+    }
+
+    input {
+        width: 380px;
+        max-width: 380px;
+    }
+
+    input#price {
+        align-self: center;
+    }
+
+    label#color-selector {
+        width: 250px;
+        margin: 0;
+    }
+
+    #color-album {
+        margin: 0;
+        height: 20px;
+        width: 70px;
+        align-self: center;
+    }
+
 }
