--- a/src/public/css/stylesRegister.css
+++ b/src/public/css/stylesRegister.css
@@ -136,7 +136,7 @@ p {
 
 p#error {
     width: 80%;
-    margin: 10px auto;
+    margin: 0 auto;
     text-align: center;
     color:rgb(209, 50, 50)
 }
