--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -8,32 +8,32 @@
             <div class="division">
                 <div class="info">
                     <label for="name">Nombre del Artista: </label>
-                    <input type="text" name="artist" id="name" required>
+                    <input type="text" name="artist" id="name" value="<%= locals && locals.writtenValues ? writtenValues.artist : '' %>" required>
                 </div>
                 <div class="info">
                     <label for="album">Nombre del Album: </label>
-                    <input type="text" name="album" id="album" required>
+                    <input type="text" name="album" id="album" value="<%= locals && locals.writtenValues ? writtenValues.album : '' %>" required>
                 </div>
             </div>
             <div class="division">
                 <div class="info">
                     <label for="genre">Genero: </label>
-                    <input type="text" name="genre" id="genre" required>
+                    <input type="text" name="genre" id="genre" value="<%= locals && locals.writtenValues ? writtenValues.genre : '' %>" required>
                 </div>
                 <div class="info">
                     <label for="year">Año de lanzamiento: </label>
-                    <input type="number" name="year" id="year" required>
+                    <input type="number" name="year" id="year" value="<%= locals && locals.writtenValues ? writtenValues.year : '' %>" required>
                 </div>
             </div>
             <div class="division">
                 <div class="info">
                     <label for="price">Precio: $</label>
-                    <input type="number" step="0.01" name="price" id="price" required>
+                    <input type="number" step="0.01" name="price" id="price" value="<%= locals && locals.writtenValues ? writtenValues.price : '' %>" required>
                 </div>
                 <div class="info">
                     <label for="description">Descripción: </label>
                     <!-- <input type="text" name="description" id="description"> -->
-                    <textarea name="description" id="description" cols="40" rows="5" required></textarea>
+                    <textarea name="description" id="description" cols="40" rows="5" required><%= locals && locals.writtenValues ? writtenValues.description : '' %></textarea>
                 </div>
             </div>
             <div class="division">
@@ -46,7 +46,7 @@
                     <select name="color" id="color-album" required>
                         <% if(locals && locals.availableColors) { %>
                             <% availableColors.forEach( colour => { %>
-                        <option value="<%= colour.color %>"><%= colour.name %></option>
+                        <option value="<%= colour.color %>" <%= locals && locals.writtenValues && ( writtenValues.color == colour.color ) ? 'selected' : '' %>><%= colour.name %></option>
                             <% }) %>
                         <% } %>
                     </select>
@@ -57,9 +57,9 @@
                 <label>Canciones :</label>
                 <div class="songs">
                     <label for="songs">Titulo :</label>
-                    <input type="text" name="song" id="songs" required>
+                    <input type="text" name="song" id="songs" value="<%= locals && locals.writtenValues ? writtenValues.song : '' %>" required>
                     <label for="lenght">Duracion :</label>
-                    <input type="text" name="lenght" id="lenght" value="00:00" required>
+                    <input type="text" name="lenght" id="lenght" value="<%= locals && locals.writtenValues ? writtenValues.lenght : '00:00' %>" required>
                 </div>
             </div>
             <div id="in-case-of-errors">
