Ultimas modificaciones para el diseño
Se modifico la altura del footer para dispositivos móviles, se agregó
una descripción sobre como tiene que ser escrita la contraseña y
finalmente se agrego estilo a esto ultimo.

--- a/src/public/css/stylesRegister.css
+++ b/src/public/css/stylesRegister.css
@@ -134,6 +134,14 @@ p {
     text-align: center;
 }
 
+p#password-rule {
+    display: inline;
+    font-size: 12px;
+    padding: 0;
+    margin: 0 0 0 12px;
+    font-weight: 600;
+}
+
 p#error {
     width: 80%;
     margin: 0 auto;
