--- a/src/src/views/users/register.ejs
+++ b/src/src/views/users/register.ejs
@@ -17,7 +17,7 @@
                 <input type="text" name="email" id="email" value="<%= locals.writtenValues && writtenValues.email ? writtenValues.email : '' %>" required>
             </article>
             <article>
-                <label for="password">Contraseña :</label>
+                <label for="password">Contraseña :</label><p id="password-rule">Ingresar como mínimo un caracter mayúsculo, otro minúsculo y otro especial.</p>
                 <input type="password" name="password" id="password" required>
             </article>
             <article>
