--- a/src/public/css/stylesCart.css
+++ b/src/public/css/stylesCart.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  background-color: rgb(248, 248, 248);
 }
 
 .navbar {
@@ -38,7 +39,7 @@ body {
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  background-color: rgb(243, 242, 242)
+  background-color: white;
 }
 
 .img {
@@ -115,6 +116,7 @@ h2#empty {
   padding: 4% 0;
   display: flex;
   justify-content: space-around;
+  background-color: white;
 }
 
 .codigo input {
@@ -136,6 +138,7 @@ h2#empty {
   padding: 4% 0;
   display: flex;
   justify-content: space-around;
+  background-color: white;
 }
 
 input {
