--- a/src/public/css/stylesCreateProduct.css
+++ b/src/public/css/stylesCreateProduct.css
@@ -5,6 +5,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    background-color: rgb(248, 248, 248);
 }
 
 .central-logo {
@@ -48,7 +49,8 @@ h1 {
     width: 90%;
     height: 1000px;
     border: 1px gray solid;
-    border-radius: 10px;
+    border-radius: 5px;
+    background-color: white;
 }
 
 .info {
