--- a/src/public/css/stylesEditProduct.css
+++ b/src/public/css/stylesEditProduct.css
@@ -5,6 +5,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    background-color: rgb(248, 248, 248);
 }
 
 .central-logo {
@@ -48,8 +49,9 @@ h1 {
     width: 90%;
     height: 1270px;
     border: 1px gray solid;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-bottom: 10px; /* extra con respecto a createProduct styles.*/
+    background-color: white;
 }
 
 .product-delete {
